Project2/p2/force-app/main/default/objects/Hourly_Forecast__c/Hourly_Forecast__c.object-meta.xml
<CustomObject>
    <label>24 Hour Forecast</label>
    <nameField>
        <displayFormat>24HF-{0000000000}</displayFormat>
        <label>24 Hour Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>24 Hour Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>