Project2/p2/force-app/main/default/objects/Hourly_Forecast__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>24 Hour Forecasts</relationshipLabel>
    <relationshipName>Hourly_Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>