Project2/p2/force-app/main/default/objects/Hourly_Forecast__c/fields/Sunset__c.field-meta.xml
<CustomField>
    <fullName>Sunset__c</fullName>
    <label>Sunset</label>
    <type>Time</type>
</CustomField>