Project2/p2/force-app/main/default/objects/Hourly_Forecast__c/fields/Temperature_High__c.field-meta.xml
<CustomField>
    <fullName>Temperature_High__c</fullName>
    <label>Temperature High</label>
    <summarizedField>Forecast_Entry__c.Temperature__c</summarizedField>
    <summaryForeignKey>Forecast_Entry__c.Hourly_Forecast__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>